Fix banner picture height problem on mobile

--- a/themes/aurel-theme/sass/_front-page.scss
+++ b/themes/aurel-theme/sass/_front-page.scss
@@ -45,13 +45,13 @@
     //height: 20vh;
     min-height: 300px;
     @include mobile {
-      height: 400px;
+      //height: 400px;
       min-height: 0px;
     }
     img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
       object-position: center;
     }
   }
