--- a/themes/aurel-theme/style.css
+++ b/themes/aurel-theme/style.css
@@ -2186,6 +2186,8 @@ label[for='nav-trigger'] {
     #myFooter {
       background: -webkit-gradient(linear, left top, right top, from(#1b447f), to(#35ced3));
       background: linear-gradient(to right, #1b447f 0%, #35ced3 100%); } }
+  #myFooter ul li {
+    text-indent: 0px; }
   @media (max-width: 740px) {
     #myFooter {
       -webkit-box-orient: vertical;
@@ -2365,13 +2367,12 @@ label[for='nav-trigger'] {
     min-height: 300px; }
     @media (max-width: 740px) {
       .slides-container .each-slide-item {
-        height: 400px;
         min-height: 0px; } }
     .slides-container .each-slide-item img {
       width: 100%;
       height: 100%;
-      -o-object-fit: cover;
-         object-fit: cover;
+      -o-object-fit: contain;
+         object-fit: contain;
       -o-object-position: center;
          object-position: center; }
 
